adding animation type

--- a/framework/index.html
+++ b/framework/index.html
@@ -259,13 +259,13 @@
       <header class='modal__headers'>
         <div class='modal__header' data-section-name='single'>
           <button class='gray--light--borderless left' data-modal-close><i class='ez-close'></i></button>
-          <h1 class='title'>Welcome Title</h1>
+          <h1 class='title' data-animation-type='slide'>Welcome Title</h1>
           <button class='blue--borderless right'>Action</button>
         </div>
 
         <div class='modal__header' data-section-name='slide'>
           <button class='gray--light--borderless left' data-section-switch='single'><i class='w-icon-chevron-left-light'></i></button>
-          <h1 class='title'>View Title</h1>
+          <h1 class='title' data-animation-type='slide'>View Title</h1>
         </div>
       </header>
 
@@ -309,7 +309,7 @@
 
         <div class='modal__header' data-section-name='progress'>
           <button class='gray--light--borderless left' data-section-switch='action'><i class='w-icon-chevron-left-light'></i></button>
-          <h1 class='title'>Progress Title</h1>
+          <h1 class='title' data-animation-type='slide'>Progress Title</h1>
           <button class='blue--borderless right'>next</button>
         </div>
       </header>
