CHANGING: modals animation

--- a/framework/index.html
+++ b/framework/index.html
@@ -127,7 +127,8 @@
             <h3 class='title'>App Card</h3>
             <div class='card'>
               <div class='thumbnail'>
-                <figure class='icon' style='background-image:url(img/mailchimp.png); background-color: #77cff2'></figure>
+                <figure class='icon'></figure>
+                <!-- <figure class='icon' style='background-image:url(img/mailchimp.png); background-color: #77cff2'></figure> -->
               </div>
               <h4 class='name'>App Name</h4>
               <figure class='rating' data-rating='4.5'>
@@ -166,10 +167,11 @@
             <h3 class='title'>App Action Card</h3>
             <div class='card'>
               <div class='thumbnail'>
-                <figure class='icon' style='background-image:url(img/mailchimp.png); background-color: #77cff2'></figure>
+                <figure class='icon'></figure>
+                <!-- <figure class='icon' style='background-image:url(img/mailchimp.png); background-color: #77cff2'></figure> -->
               </div>
               <h4 class='name'>App Name</h4>
-              <figure class='rating' data-rating='4'>
+              <figure class='rating' data-rating='3.5'>
                 <i class='ez-star'></i>
                 <i class='ez-star'></i>
                 <i class='ez-star'></i>
