--- a/framework/index.html
+++ b/framework/index.html
@@ -179,7 +179,14 @@
                 <i class='ez-star'></i>
                 <figcaption class='rating__count'>(132)</figcaption>
               </figure>
-              <button class='blue'>Add</button>
+              <button class='svg' data-button-load>
+                <span class='value'>Add</span>
+                <svg class='btn--svg'>
+                  <path class='path' d="M152.5,43h-130C11.2,43,2,33.8,2,22.5v0C2,11.2,11.2,2,22.5,2h130c11.3,0,20.5,9.2,20.5,20.5v0C173,33.8,163.8,43,152.5,43z"/>
+                  <path class='path--loader' d="M152.5,43h-130C11.2,43,2,33.8,2,22.5v0C2,11.2,11.2,2,22.5,2h130c11.3,0,20.5,9.2,20.5,20.5v0C173,33.8,163.8,43,152.5,43z"/>
+                </svg>
+              </button>
+
               <ul class='card__items'>
                 <li class='card__item'>$19/mo</li>
                 <li class='card__item'>14 day free trial</li>
